--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@
 .a9{
     display: flex;
 }
+.ml0{
+    display: flex;
+}
 .el1{
     border-width: 2px;
     border-style: solid;
@@ -585,6 +588,40 @@ button{
     height: 100px;
 }
 .ds{
+    padding-top: 5%;
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+.ml1{
+    border-width: 2px;
+    border-style: solid;
+    margin-top: 3%;
+    margin-left: 5%;
+    margin-right: 3%;
+    margin-bottom: 5%;
+    background-color: rgb(233, 170, 208);
+    border-radius: 3%;
+    width: 750px;
+    height: 100px;
+}
+.ml{
+    padding-top: 5%;
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+.ai1{
+    border-width: 2px;
+    border-style: solid;
+    margin-top: 3%;
+    margin-left: 15%;
+    margin-right: 3%;
+    margin-bottom: 5%;
+    background-color: rgb(233, 170, 208);
+    border-radius: 3%;
+    width: 750px;
+    height: 100px;
+}
+.ai{
     padding-top: 5%;
     text-align: center;
     font-family: 'Source Sans Pro', sans-serif;
